<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.tanvir.shoestore.ui.login.LoginViewModel" />
    </data>

    <!--    so i wanted to use scrollView just to use the fragment when rotated-->
    <!--    So that why I used ConstraintLayout insted of other available layouts -->
    <!--    if I have not consider the scolling option in this layout I would prefer -->
    <!--    using LinearLayout instead-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:theme="@style/Theme.ShoeStore">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/indicatorText"
                    style="@style/headline_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/headline_top_margin"
                    android:text="@string/Login" />

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="68dp"
                    android:hint="@string/prompt_email"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/indicatorText"
                    app:startIconDrawable="@drawable/email_vector">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_filed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="26dp"
                        tools:layout_editor_absoluteY="305dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/prompt_password"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:startIconDrawable="@drawable/ic_baseline_password_24"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_filed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="26dp"
                        tools:layout_editor_absoluteY="305dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:onClick="@{() -> loginViewModel.successFullLogin()}"
                    android:text="@string/action_sign_in" />

                <TextView
                    android:id="@+id/orTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or" />

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="@{() -> loginViewModel.successFullLogin()}"

                    android:text="@string/action_sign_up" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>